--- a/pages/discover/discover.wxss
+++ b/pages/discover/discover.wxss
@@ -15,7 +15,7 @@
   background-color: #fff;
   margin:0 auto;
   padding:10px 15px;
-
+  margin-top: 15px;
 }
 
 .discover .discover_images {
@@ -25,7 +25,7 @@
 
 .discover .discover_images image {
   width: 45px;
-  border-radius: 50%;
+  /* border-radius: 50%; */
 }
 
 .discover .discover_images view {
@@ -35,7 +35,7 @@
 .discover .discover_disco {
   background-color: #fff;
   padding: 15px;
-  margin-top: 15px;
+  /* margin-top: 15px; */
 }
 
 .discover .discover_disco .discover_disco_content {
@@ -59,7 +59,7 @@
 }
 
 .discover .discover_disco .discover_disco_c .discover_disco_c_title {
-  border-bottom: 1px solid #d4d4d4;
+  border-bottom: 1px solid #b2b2b2;
   font-weight: bold;
 }
 
@@ -71,7 +71,7 @@
 
 .discover .discover_disco  .discover_disco_b {
   padding-top: 5px;
-  color: #808080;
+  color: #888888;
   font-size: 10px;
 }
 
@@ -100,7 +100,7 @@
 }
 
 .discover .discover_comm_l_title{
-  color: #dedede
+  color: #b2b2b2
 }
 
 .discover .detail_comm_content{
@@ -118,7 +118,7 @@
 }
 
 .discover .detail_comm_content .detail_comm_content_r .detail_comm_content_t{
-  color: #dedede;
+  color: #b2b2b2;
   font-size: 10px
 }
 
@@ -142,3 +142,45 @@
 .discover_intr{
   padding: 25px;
 }
+
+.discover_knowledge{
+  width: 100%;
+  background-color: #ffffff;
+  text-align: center;
+  border: 1px solid #d2d2d2; 
+}
+
+.discover_knowledge .discover_knowledge_baby{
+  width: 100%;
+  height: 50px;
+  border-bottom: 1px solid #d2d2d2;  
+}
+
+.discover_knowledge .discover_knowledge_b{
+  width: 100%;
+  height: 100px;
+}
+
+.discover_knowledge .discover_knowledge_seasons{
+  width: 50%;
+  height: 100%;
+}
+
+.discover_knowledge .discover_knowledge_r{
+  width: 50%;
+  height: 100%;
+  border: 1px solid #d2d2d2; 
+}
+
+.discover_knowledge .discover_knowledge_stain{
+  width: 100%;
+  height: 50%;
+  border-bottom: 1px solid #d2d2d2 
+}
+
+.discover_knowledge .discover_knowledge_material{
+  width: 100%;
+  height: 50%;
+  /* border: 1px solid #d2d2d2 */
+}
+
